# ganbaru-ai

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  PERFORMANCE.md  PRODUCT_SPEC.md  PROGRESS.md  README.md  ROADMAP.md  TECH_STACK.md  TESTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.cargo/: audit.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: check.yml  release.yml
apps/client/: index.html  package.json  test-setup.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/client/scripts/: build-package-repo.mjs  check-tailwind-diagnostics.mjs  install-chrome-native-host.mjs  release-metadata.mjs  setup-brave-extension.mjs  setup-chromium-extension.mjs  sign-tauri-release-assets.mjs  stage-tauri-release-assets.mjs  tauri-cli.mjs  write-aur-package.mjs  write-tauri-latest-json.mjs  write-tauri-release-config.mjs
apps/client/src/: App.svelte  app.css  app.d.ts  fontsource.d.ts  main.ts
apps/client/src-tauri/: Cargo.toml  deb.desktop.hbs  tauri.conf.json  tauri.dev.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/migrations/: 20260529180656_baseline_schema.sql  20260530190000_add_focus_failed_pomodoro_reason.sql  20260601000000_remove_all_day_pomodoro_configs.sql  20260610182234_add_balanced_pomodoro_preset.sql
apps/client/src-tauri/package-scripts/deb/: postinst  postrm
apps/client/src-tauri/package-scripts/rpm/: postinstall.sh  postremove.sh
apps/client/src-tauri/src/: benchmark_seed.rs  calendar_description.rs  calendar_events.rs  calendar_import.rs  calendar_reads.rs  calendars.rs  db.rs  db_batch.rs  db_path.rs  doomscrolling.rs  kanban.rs  lib.rs  media_controls.rs  media_player.rs  music.rs  notification.rs  pomodoro.rs  pomodoro_enforcement.rs  procrastination_stopper.rs  recurrence.rs  sqlite_row.rs  themes.rs  timezone_migration.rs  tray.rs  updates.rs  vault.rs  window_shape.rs
apps/client/src-tauri/src/calendar_events/: archive.rs  children.rs  commands.rs  ids.rs  mod.rs  progress.rs  restore.rs  tests.rs  time.rs  types.rs  validation.rs  writes.rs
apps/client/src-tauri/src/calendar_import/: preservation.rs  validation.rs
apps/client/src-tauri/src/calendar_reads/: hydration.rs  icalendar.rs
apps/client/src-tauri/src/db/: tests.rs
apps/client/src-tauri/src/doomscrolling/: tests.rs
apps/client/src-tauri/src/music/: artwork.rs  host.rs  youtube_host.rs
apps/client/src-tauri/src/notification/: commands.rs  idle.rs  shortcuts.rs  sounds.rs
apps/client/src-tauri/src/pomodoro/: commands.rs  reads.rs  tests.rs  time.rs  validation.rs  writes.rs
apps/client/src/lib/: app-sounds.ts  buildInfo.ts  doomscrolling.test.ts  doomscrolling.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  navigation.test.ts  navigation.ts  procrastination-stopper.test.ts  procrastination-stopper.ts  utils.test.ts  utils.ts  window-sync.ts
apps/client/src/lib/api/: db.ts  doomscrolling.ts  media-controls.ts  media-player.ts  music.ts  procrastination-stopper.ts  themes.ts
apps/client/src/lib/benchmark/: dense.test.ts  dense.ts  output.test.ts  output.ts  pomodoro-history.test.ts  pomodoro-history.ts  registry.test.ts  registry.ts  runner.ts  sampler.test.ts  sampler.ts  synth.test.ts  synth.ts  types.test.ts  types.ts
apps/client/src/lib/calendar/: calendar-display.test.ts  calendar-display.ts  description-sanitizer.test.ts  description-sanitizer.ts
apps/client/src/lib/components/: HelpShortcutsModal.svelte  ThemeQuickSwitcher.svelte  (+4 more)
apps/client/test-fixtures/ics/: edge-cases.ics  google-calendar-sample.ics  outlook-sample.ics
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: db.rs  lib.rs  notification.rs  tray.rs
docs/: OPTIMIZATION.md  PERFORMANCE.md  PRODUCT_SPEC.md  PROGRESS.md  PROGRESS_TRACKING.md  RESPONSIVE_UX_PLAN.md  ROADMAP.md  TECH_STACK.md  TS_TO_RUST.md  goal.md  release-notes-template.md  release.md  rulesets.md
docs/algorithms/: idle-detection.md  pomodoro-adaptive-rhythm.md  pomodoro-segments-and-plan.md  pomodoro-state-machine.md  recurrence-expansion.md  time-conflict-detection.md  undo-redo.md
docs/data/: architecture.md  hazards.md  invariants.md  schema.md  security.md  sync.md
docs/features/: ai-integration.md  app-sounds.md  calendar-recurrence-editing.md  calendar-recurrence.md  calendar.md  diary.md  doomscrolling.md  edge-panel.md  gamification.md  kanban.md  localization.md  music.md  notes.md  performance-benchmark.md  pomodoro-break-screen.md  pomodoro-idle-detection.md  pomodoro-progress-displays.md  pomodoro.md  procrastination-stopper.md  project-management.md  projects.md  sleep-alarm.md  themes.md  to-do.md  tray-icon.md  work-environments.md
docs/interop/icalendar/: README.md  architecture.md  conformance-checklist.md  data-model.md  decisions.md  edit-merge-policy.md  fixtures-and-clients.md  migration-plan.md  milestones.md  performance-budget.md  recurrence-and-timezones.md  scheduling-boundary.md  standards-scope.md
docs/interop/icalendar/clients/: apple-calendar.md  fastmail.md  google-calendar.md  nextcloud.md  outlook.md  proton-calendar.md  thunderbird.md
extensions/chrome/: README.md  background.js  blocked.html  blocked.js  host-config.js  manifest.json  popup.html  popup.js  styles.css
plugins/media-player/: Cargo.toml  build.rs  package.json
plugins/media-player/guest-js/: index.ts
plugins/media-player/permissions/: default.toml
plugins/media-player/permissions/autogenerated/: reference.md
plugins/media-player/permissions/autogenerated/commands/: clear_surface.toml  probe.toml  set_surface_rect.toml
plugins/media-player/permissions/schemas/: schema.json
plugins/media-player/src/: lib.rs
(+390 files in other folders)
