[package]
name = "tauri-plugin-media-player"
version = "0.1.0"
description = "GanbaruAI native media playback plugin"
authors = ["GanbaruAI"]
license = "LGPL-2.1-only"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-media-player"

[lib]
name = "tauri_plugin_media_player"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
