[package]
name = "tauri-plugin-media-player"
version = "0.1.0"
description = "GanbaruAI native media playback plugin"
authors = ["GanbaruAI"]
license = "LGPL-2.1-only"
edition = "2021"
build = "build.rs"
links = "tauri-plugin-media-player"

[lib]
name = "tauri_plugin_media_player"
crate-type = ["rlib"]

[features]
default = []
native-video-gstreamer = [
  "dep:gstreamer",
  "dep:gstreamer-video",
  "dep:raw-window-handle",
]

[dependencies]
gstreamer = { version = "0.25.2", optional = true }
gstreamer-video = { version = "0.25.2", optional = true }
raw-window-handle = { version = "0.6", optional = true }
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-aac",
  "symphonia-alac",
  "symphonia-ogg",
  "symphonia-vorbis",
  "symphonia-wav",
  "symphonia-pcm",
] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2" }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
