[package]
name = "ganbaruai-desktop"
version = "0.1.0"
description = "GanbaruAI desktop app"
authors = ["GanbaruAI"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "json", "any", "derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
notify-rust = "4"
# Minimal zip support for unpacking Google/Apple-style `.ics.zip` exports.
# `default-features = false` strips AES (encrypted zips), bzip2, lzma, zstd,
# ppmd, deflate64, and time; we only need plain deflate for ICS bundles, so
# the import path stays narrow and the binary stays lean.
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "sysinfoapi", "psapi", "tlhelp32", "processthreadsapi", "handleapi", "winnt"] }
