[package]
name = "ganbaruai"
version = "0.1.0"
description = "GanbaruAI desktop app"
authors = ["GanbaruAI"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ammonia = "4.1.2"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-aac",
  "symphonia-alac",
  "symphonia-ogg",
  "symphonia-vorbis",
  "symphonia-wav",
  "symphonia-pcm",
] }
sqlx-core = { version = "0.8", default-features = false, features = ["_rt-tokio", "json", "migrate", "offline"] }
sqlx-sqlite = { version = "0.8", default-features = false, features = ["bundled", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
tauri-plugin-dialog = "2"
notify-rust = "4"
# Minimal zip support for unpacking Google/Apple-style `.ics.zip` exports.
# `default-features = false` strips AES (encrypted zips), bzip2, lzma, zstd,
# ppmd, deflate64, and time; we only need plain deflate for ICS bundles, so
# the import path stays narrow and the binary stays lean.
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
] }
