[package]
name = "ganbaru-ai"
version = "0.1.0"
description = "Ganbaru AI desktop app"
authors = ["Ganbaru AI"]
license = "AGPL-3.0-only"
edition = "2021"
default-run = "ganbaru-ai"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "~2.6.1", features = [] }

[dependencies]
ammonia = "4.1.2"
tauri = { version = "~2.11.1", features = ["tray-icon", "image-png"] }
rodio = { version = "0.22.2", default-features = false, features = [
  "playback",
  "symphonia-flac",
  "symphonia-mp3",
  "symphonia-isomp4",
  "symphonia-aac",
  "symphonia-alac",
  "symphonia-ogg",
  "symphonia-vorbis",
  "symphonia-wav",
  "symphonia-pcm",
] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2.10.1"
notify-rust = "4"
# Minimal zip support for unpacking Google/Apple-style `.ics.zip` exports.
# `default-features = false` strips AES (encrypted zips), bzip2, lzma, zstd,
# ppmd, deflate64, and time; we only need plain deflate for ICS bundles, so
# the import path stays narrow and the binary stays lean.
zip = { version = "8", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
x11rb = "0.13.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Media",
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSRunningApplication",
    "NSResponder",
    "NSWorkspace",
    "NSWindow",
    "libc",
] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "CFString",
    "objc2",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSObject",
    "NSGeometry",
    "NSObjCRuntime",
    "NSString",
] }

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4.2"
