[package]
name = "ganbaruai-desktop"
version = "0.1.0"
description = "GanbaruAI desktop app"
authors = ["GanbaruAI"]
license = "AGPL-3.0-only"
edition = "2021"

[lib]
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
